[ntp-footer] Collapse customize button to avoid overlap.
Bug: 419158113
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6607929
Commit-Queue: Teresa Mao <temao@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1467679}

--- a/chrome/browser/resources/new_tab_shared/customize_buttons/customize_buttons.css
+++ b/chrome/browser/resources/new_tab_shared/customize_buttons/customize_buttons.css
@@ -111,6 +111,17 @@
   }
 }
 
+@media (max-width: 790px) {
+  :host([info-shown-to-user]) .customize-button {
+    padding-inline-end: 0;
+    padding-inline-start: 8px;
+  }
+
+  :host([info-shown-to-user]) .customize-text {
+    display: none;
+  }
+}
+
 :host([wallpaper-search-button-animation-enabled])
     #wallpaperSearchButton {
   animation: 750ms forwards grow-container, 500ms forwards 300ms color-text;
